--- a/VendingMachine.csproj
+++ b/VendingMachine.csproj
@@ -133,6 +133,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CoinModel.cs" />
+    <Compile Include="Models\CoinModelContext.cs" />
     <Compile Include="Models\DrinkModel.cs" />
     <Compile Include="Models\DrinkModelContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -180,6 +182,8 @@
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
